@@ -46,7 +46,7 @@ class InstanceLoggerAdapter implements Loggable {
       InstanceComponent comp, Class<? extends InstanceLogger> loggerClass) {
     try {
       this.comp = comp;
-      this.logger = loggerClass.newInstance();
+      this.logger = loggerClass.getDeclaredConstructor().newInstance();
       this.state = new InstanceStateImpl(null, comp);
     } catch (Exception t) {
       handleError(t, loggerClass);
